# app-store-checkout

./: .env.example  .gitignore  App.tsx  README.md  app.json  babel.config.js  jest.config.js  jest.setup.js  package-lock.json  package.json
__tests__/: App.test.tsx  BackendSyncCard.test.tsx  appShell.test.tsx  backendApiClient.test.ts  backendProductMapper.test.ts  backendTransactionMapper.test.ts  catalogSlice.test.ts  catalogWorkflow.test.ts  i18n.test.tsx  screenRendering.test.tsx  selectors.test.ts  store.test.ts  storeReducers.test.ts  transactionPersistence.test.ts  uiInteractions.test.tsx  utils.test.ts
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/jni/: CMakeLists.txt
ios/: Podfile
ios/StoreCheckout/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/StoreCheckout.xcodeproj/: project.pbxproj
src/: AppShell.tsx  env.d.ts  theme.ts  types.ts
src/assets/: productImages.ts
src/components/: AppButton.tsx  AppCard.tsx  BackendSyncCard.tsx  CardBrandLogos.tsx  CartLineItem.tsx  EmptyState.tsx  FlowStepper.tsx  MetricCard.tsx  Pill.tsx  ProductArtwork.tsx  ProductCard.tsx  ScreenFrame.tsx  SectionHeader.tsx  TabBar.tsx
src/data/: demo.ts
src/i18n/: index.tsx  messages.ts
src/screens/: CartScreen.tsx  CatalogScreen.tsx  CheckoutScreen.tsx  ConfirmationScreen.tsx  HistoryScreen.tsx  HomeScreen.tsx  ProductDetailScreen.tsx
src/state/: shellState.ts
src/store/: secureCodec.ts  selectors.ts  store.ts  transactionStorage.ts
src/store/cart/: cartSlice.ts
src/utils/: cardValidation.ts  format.ts  responsive.ts
(+20 files in other folders)
